@startuml
skinparam classAttributeIconSize 0


abstract class IcecreamDecorator

interface Icream{
    List<String> getAddons();
    String getDescription();
    double getCost();
}


Icream <|-- IcecreamDecorator

IcecreamDecorator <|-- ChocolateIceCream




enum Price {
vanillaPrice
mintPrice
singleScoop
chocolatePrice
}


@enduml